Spacing corrections following on from new type sizes

--- a/src/components/callout/_callout.scss
+++ b/src/components/callout/_callout.scss
@@ -34,7 +34,7 @@
         padding: 32px;
 
         &__title {
-            line-height: 32px;
+            line-height: 56px;
         }
     }
 }
