--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -12,7 +12,6 @@ $site-footer__background: $colour__brand !default;
     @include small-size;
     background-color: $site-footer__background;
     line-height: 24px;
-    margin-top: 64px;
     padding-bottom: 32px;
     padding-top: 24px;
 
